--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="search-bar-container">
             <div class="slogan">
-                "Explore the World, Your Way &#8211; anytime, anywhere!"
+                "Explore the World, your way &#8211; anytime, anywhere!"
             </div>
             <div>
                 <input class="search-bar" type="text" placeholder="Search for Location">
